@@ -8,6 +8,7 @@ import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -17,6 +18,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import javax.sql.rowset.serial.SerialException;
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -45,10 +47,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             Jws<Claims> claims= jwtService.validateToken(token);
             String userId=claims.getBody().getSubject();
 
+            String role=claims.getBody().get("role",String.class);
             UsernamePasswordAuthenticationToken authentication=new UsernamePasswordAuthenticationToken(
                     userId,
                     null,
-                    Collections.emptyList()
+                    List.of(new SimpleGrantedAuthority(role))
             );
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
